--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <SearchView
+    <EditText
+            android:id="@+id/search_text"
+            android:hint="szukaj"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:inputType="text"
+            android:layout_height="wrap_content"
+            tools:ignore="Autofill,HardcodedText"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/user_list"
