--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -13,4 +13,9 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             tools:text="Login"/>
 
+    <View
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"/>
+
 </LinearLayout>
