--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -5,15 +5,6 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
 
-    <TextView
-            android:id="@+id/login"
-            tools:text="login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-            app:layout_constraintBottom_toTopOf="@+id/avatar"
-            app:layout_constraintStart_toStartOf="@+id/avatar"
-            android:layout_marginBottom="10dp"/>
 
     <ImageView
             android:id="@+id/avatar"
@@ -23,11 +14,58 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="20dp"
             android:maxWidth="250dp"
             tools:layout_width="200dp"
             tools:layout_height="200dp"
             android:scaleType="centerInside"
             android:adjustViewBounds="true"/>
+
+    <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/avatar"
+            app:layout_constraintStart_toStartOf="@+id/avatar"
+            tools:text="Imie Nazwisko"
+            android:layout_marginTop="10dp"/>
+
+    <TextView
+            android:id="@+id/login"
+            tools:text="login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_marginTop="10dp"/>
+
+    <TextView
+            android:id="@+id/blog_link"
+            tools:text="www.example.com"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/login"
+            app:layout_constraintStart_toStartOf="@+id/login"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:autoLink="web"/>
+
+    <TextView
+            android:id="@+id/location"
+            tools:text="Metropolis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            app:layout_constraintTop_toBottomOf="@+id/blog_link"
+            app:layout_constraintStart_toStartOf="@+id/blog_link"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
