--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -28,6 +28,8 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             app:layout_constraintTop_toBottomOf="@+id/avatar"
             app:layout_constraintStart_toStartOf="@+id/avatar"
+            android:visibility="gone"
+            tools:visibility="visible"
             tools:text="Imie Nazwisko"
             android:layout_marginTop="10dp"/>
 
@@ -39,8 +41,7 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             app:layout_constraintTop_toBottomOf="@+id/name"
             app:layout_constraintStart_toStartOf="@+id/name"
-            android:visibility="gone"
-            tools:visibility="visible"
+            android:visibility="visible"
             android:layout_marginTop="10dp"/>
 
     <TextView
