--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -14,7 +14,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
+            app:layout_constraintHorizontal_bias="0.2"
+            android:layout_marginTop="50dp"
             android:maxWidth="250dp"
             tools:layout_width="200dp"
             tools:layout_height="200dp"
